MuniUsers/View Profile/Groups section- wrong groups are displayed New files added - [Forms.variables.json,Forms.css,Forms.html,Forms.js] Files modified - [app.variables.json,pages-config.json,MunicipalityUsers.html,MunicipalityUsers.js]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -218,6 +218,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_Forms" : {
+    "_id" : "wm-goToPage_Forms-wm.NavigationVariable-1484041515435",
+    "name" : "goToPage_Forms",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "Forms",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Main" : {
     "_id" : "wm-wm.NavigationVariable1389180517517",
     "name" : "goToPage_Main",
