--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -59,6 +59,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "Forms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Login",
   "type" : "PAGE",
   "params" : [ ]
@@ -92,6 +96,10 @@
   "params" : [ ]
 }, {
   "name" : "ManageGISData",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "ManageMuncipalityGroups",
   "type" : "PAGE",
   "params" : [ ]
 }, {
