1- Fishers DB creation with NewResidential Structure 2- GIS Maintenance- MuniEmployee can't see GIS Record panel New files added - [NewResidentialStructure.java,fishers-queries.hbm.xml,FishersQueryExecutorServiceImpl.java,QueryExecutionController.java,fishers.spring.xml,fishers_published_dataModel.json,NewResidentialStructureServiceImpl.java,NewResidentialStructureDao.java,db-connection-settings.json,fishers_query.json,NewResidentialStructureService.java,ProcedureExecutionController.java,fishers.properties,FishersProcedureExecutorServiceImpl.java,FishersProcedureExecutorService.java,package-info.java,FishersQueryExecutorService.java,servicedef.xml,fishers_procedure.json,NewResidentialStructureController.java,fishers-procedures.mappings.json] Files modified - [project-services.xml,EditGISRecord.html,pom.xml,deployment.properties,development.properties]

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/fishers/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -127,6 +134,7 @@
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
                                 <source>services/cx2/src</source>
+                                <source>services/fishers/src</source>
                                 <source>services/securityService/src</source>
                             </sources>
                         </configuration>
