Vendor Review- invalid Expiration Dates allowed Files modified - [ManageMunicipalityVendors.js,ManageMunicipalityVendors.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -508,7 +508,7 @@
       "type" : "string"
     }, {
       "target" : "text",
-      "value" : "Invalid UserName or Password",
+      "value" : "Your password is incorrect. Please check your password and try again.",
       "type" : "string"
     }, {
       "target" : "duration",
