Put CX Admin page content into panels to meet dev standards. Created placeholder pages for future development of CXAdmin Manage Roles and Manage Companies pages New files added - [ManageRoles.css,ManageCompanies.html,ManageCompanies.css,ManageCompanies.variables.json,ManageRoles.variables.json,ManageRoles.js,ManageRoles.html,ManageCompanies.js,ManageRoles,ManageCompanies] Files modified - [pages-config.json,ManageUsers.html,CXAdmin.html,ManageMunicipalities.html,ManageSubscriptions.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -237,6 +237,17 @@
     "operation" : "gotoPage",
     "pageName" : "Main"
   },
+  "goToPage_ManageCompanies" : {
+    "_id" : "wm-goToPage_ManageCompanies-wm.NavigationVariable-1484344579277",
+    "name" : "goToPage_ManageCompanies",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageCompanies",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ManageForms" : {
     "_id" : "wm-goToPage_ManageForms-wm.NavigationVariable-1479980516604",
     "name" : "goToPage_ManageForms",
@@ -278,6 +289,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "ManageMunicipalityVendors",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_ManageRoles" : {
+    "_id" : "wm-goToPage_ManageRoles-wm.NavigationVariable-1484344556601",
+    "name" : "goToPage_ManageRoles",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ManageRoles",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
