--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -91,6 +91,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageCompanies",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageForms",
   "type" : "PAGE",
   "params" : [ ]
@@ -104,6 +108,10 @@
   "params" : [ ]
 }, {
   "name" : "ManageMunicipalityVendors",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "ManageRoles",
   "type" : "PAGE",
   "params" : [ ]
 }, {
