Passing FormGUID to Forms Page from Openforms List through PageParsms Files modified - [pages-config.json,UserOpenForms.js,Forms.html,UserOpenForms.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -223,10 +223,18 @@
     "name" : "goToPage_Forms",
     "owner" : "App",
     "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
+    "dataBinding" : [ {
+      "target" : "pageName",
+      "value" : "Forms",
+      "type" : "string"
+    } ],
     "operation" : "gotoPage",
     "pageName" : "Forms",
-    "dataSet" : [ ],
+    "dataSet" : [ {
+      "type" : "string",
+      "target" : "FormGUID",
+      "value" : "bind:Widgets.gridOpenForms.selecteditem.formGuid"
+    } ],
     "pageTransitions" : "none"
   },
   "goToPage_Main" : {
