1-Dynamic Form Logo 2-Dynamic Form Name Files modified - [pages-config.json,Forms.variables.json,Forms.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -234,6 +234,18 @@
       "type" : "string",
       "target" : "FormGUID",
       "value" : "bind:Widgets.gridOpenForms.selecteditem.formGuid"
+    }, {
+      "type" : "integer",
+      "target" : "MunicipalityId",
+      "value" : "bind:Widgets.gridOpenForms.selecteditem.municipalityId"
+    }, {
+      "type" : "integer",
+      "target" : "FormTypeId",
+      "value" : "bind:Widgets.gridOpenForms.selecteditem.formTypeId"
+    }, {
+      "type" : "string",
+      "target" : "FormName",
+      "value" : "bind:Widgets.gridOpenForms.selecteditem.formTypes.formType"
     } ],
     "pageTransitions" : "none"
   },
