--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -64,6 +64,15 @@
   "params" : [ {
     "name" : "FormGUID",
     "type" : "string"
+  }, {
+    "name" : "MunicipalityId",
+    "type" : "integer"
+  }, {
+    "name" : "FormTypeId",
+    "type" : "integer"
+  }, {
+    "name" : "FormName",
+    "type" : "string"
   } ]
 }, {
   "name" : "Login",
