- Added config fields for database credentials to Municipality - Added config field for table name to FormTypes - Added dynamic field rendering - Added FormService to handle future Form handling New files added - [FormService.spring.xml,servicedef.xml,FormController.java,FormService.java,README.md] Files modified - [VendorUsersController.java,cx2_published_dataModel.json,QueryExecutionController.java,cx2-queries.hbm.xml,ManageMunicipalities.variables.json,project-services.xml,EditForm.variables.json,Forms.html,FormTypes.java,Cx2QueryExecutorServiceImpl.java,ManageForms.variables.json,ManageMunicipalities.html,EditForm.html,servicedef.xml,Forms.variables.json,pom.xml,cx2_query.json,Cx2QueryExecutorService.java,Municipalities.java,servicedef.xml]

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/FormService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ResetPasswordMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -131,6 +138,7 @@
                             
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/FileService/src</source>
+                                <source>services/FormService/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
                                 <source>services/cx2/src</source>
