FormHistory-DB New files added - [FormHistory.java,FormHistoryServiceImpl.java,FormHistoryService.java,FormHistoryController.java,FormHistoryDao.java] Files modified - [cx2_published_dataModel.json,FormStatuses.java,MunicipalitiesController.java,Forms.html,FormTypesService.java,UsersController.java,FormStatusesController.java,servicedef.xml,Municipalities.java,FormStatusesServiceImpl.java,MunicipalitiesServiceImpl.java,pages-config.json,FormTypesServiceImpl.java,States.java,FormTypesController.java,Main.variables.json,FormTypes.java,StatesServiceImpl.java,Users.java,UsersService.java,UserCreation.variables.json,StatesController.java,FormStatusesService.java,StatesService.java,MunicipalitiesService.java,UsersServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -116,6 +116,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "FormHistory",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ ],
   "impersonateUser" : false,
