Form History Data Grid Files modified - [pages-config.json,Cx2QueryExecutorServiceImpl.java,UserOpenForms.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,Forms.variables.json,cx2_query.json,Forms.html,Cx2QueryExecutorService.java,Forms.js,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -246,6 +246,10 @@
       "type" : "string",
       "target" : "FormName",
       "value" : "bind:Widgets.gridOpenForms.selecteditem.formTypes.formType"
+    }, {
+      "type" : "integer",
+      "target" : "FormStatusId",
+      "value" : "bind:Widgets.gridOpenForms.selecteditem.formStatusId"
     } ],
     "pageTransitions" : "none"
   },
