--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -73,6 +73,9 @@
   }, {
     "name" : "FormName",
     "type" : "string"
+  }, {
+    "name" : "FormStatusId",
+    "type" : "integer"
   } ]
 }, {
   "name" : "Login",
