deploying for testing Files modified - [pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -178,6 +178,10 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ {
