Push Files modified - [pages-config.json,servicedef.xml]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -118,6 +118,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -172,6 +176,10 @@
 }, {
   "name" : "NewForm",
   "type" : "PARTIAL",
+  "params" : [ ]
+}, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "PUDApplication",
