--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -12,13 +12,13 @@
   "port" : "1433",
   "schemaName" : "cx2",
   "tableFilter" : [ {
+    "table" : "ContractorTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "Fees",
     "schema" : "cx2"
   }, {
     "table" : "FormCategories",
-    "schema" : "cx2"
-  }, {
-    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "FormCategoryMapping",
@@ -30,19 +30,19 @@
     "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "FormTypes",
+    "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
-    "table" : "GISRecords",
+    "table" : "FormTypes",
     "schema" : "cx2"
   }, {
     "table" : "GISContacts",
     "schema" : "cx2"
   }, {
-    "table" : "GlobalSettings",
+    "table" : "GISRecords",
     "schema" : "cx2"
   }, {
-    "table" : "MasterForms",
+    "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -54,7 +54,13 @@
     "table" : "MasterCases",
     "schema" : "cx2"
   }, {
+    "table" : "MasterForms",
+    "schema" : "cx2"
+  }, {
     "table" : "MasterInspections",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
     "table" : "MCNewElectricConnection",
@@ -66,7 +72,7 @@
     "table" : "Municipalities",
     "schema" : "cx2"
   }, {
-    "table" : "MasterProjects",
+    "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroups",
@@ -75,19 +81,16 @@
     "table" : "PUDApplication",
     "schema" : "cx2"
   }, {
+    "table" : "Roles",
+    "schema" : "cx2"
+  }, {
     "table" : "SFNewElectricConnection",
     "schema" : "cx2"
   }, {
     "table" : "SFNewResidentialStructure",
     "schema" : "cx2"
   }, {
-    "table" : "Roles",
-    "schema" : "cx2"
-  }, {
     "table" : "SharedWith",
-    "schema" : "cx2"
-  }, {
-    "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
     "table" : "States",
@@ -96,34 +99,34 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
-    "table" : "Vendor",
-    "schema" : "cx2"
-  }, {
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
-    "table" : "VendorApprovals",
+    "table" : "Users",
     "schema" : "cx2"
   }, {
-    "table" : "VendorLicenses",
+    "table" : "Vendor",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
+    "table" : "VendorApprovals",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
   } ],
-  "schemaFilter" : [ ],
+  "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
   "activeDirectoryDomain" : null,
   "hbm2ddl" : "none",
