deploying for testing Files modified - [pages-config.json,servicedef.xml]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -175,6 +175,10 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ {
