Added proper dialog for creating Form Fields New files added - [FormFieldTypesServiceImpl.java,FormFieldTypesController.java,FormFieldTypesDao.java,FormFieldTypesService.java,FormFieldTypes.java] Files modified - [pages-config.json,cx2_published_dataModel.json,FormController.java,EditForm.js,EditForm.variables.json,MunicipalitiesController.java,UsersController.java,FormTypeFields.java,ManageMunicipalities.html,FormService.java,Users.java,UsersService.java,servicedef.xml,ManualFeeTypes.variables.json,EditForm.html,UsersServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -125,6 +125,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "FormFieldTypes",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
