created UserProjects page for "My Projects" built municipality filter into Projcess Forms page and built tile count added breadcrumbs to various blank pages to prep for development minor aesthetic tweaks (icons etc.) New files added - [UserProjects.variables.json,UserProjects.js,UserProjects.css,UserProjects.html,UserProjects] Files modified - [Main.html,CompanyForms.html,VendorApplication.html,ManageGISData.variables.json,QueryExecutionController.java,MyMunicipality.html,UserOpenForms.html,app.variables.json,Cx2QueryExecutorServiceImpl.java,CompanyProfile.html,Support.variables.json,servicedef.xml,ProcessForms.variables.json,MyMunicipality.variables.json,MyCart.variables.json,cx2_query.json,ProcessForms.html,UserClosedForms.variables.json,pages-config.json,cx2-queries.hbm.xml,CompanyForms.variables.json,MyCart.html,ManageMunicipalityVendors.html,ManageMunicipalityVendors.js,Support.html,Cx2QueryExecutorService.java,UserClosedForms.html]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -503,6 +503,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_UserProjects" : {
+    "_id" : "wm-goToPage_UserProjects-wm.NavigationVariable-1484929451082",
+    "name" : "goToPage_UserProjects",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "UserProjects",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_VendorApplication" : {
     "_id" : "wm-goToPage_VendorApplication-wm.NavigationVariable-1480415119127",
     "name" : "goToPage_VendorApplication",
