--- a/src/main/webapp/pages/UserProjects/UserProjects.variables.json
+++ b/src/main/webapp/pages/UserProjects/UserProjects.variables.json
@@ -1,6 +1,6 @@
 {
   "Breadcrumb" : {
-    "_id" : "wm-Breadcrumb-wm.Variable-1484929090085",
+    "_id" : "wm-Breadcrumb-wm.Variable-1484929594213",
     "name" : "Breadcrumb",
     "owner" : "Page",
     "category" : "wm.Variable",
@@ -10,9 +10,9 @@
       "icon" : "glyphicon glyphicon-home",
       "link" : "#/Main"
     }, {
-      "label" : "My Cart",
+      "label" : "My Projects",
       "icon" : "wi wi-ellipsis-v",
-      "link" : "#/MyCart"
+      "link" : "#/UserProjects"
     } ],
     "type" : "string",
     "isList" : true,
