--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -115,10 +115,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "ManageMuncipalityGroups",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -175,10 +171,6 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
-  "name" : "NewFrom",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ {
@@ -230,6 +222,10 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
