--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/FormStatusUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ResetPasswordMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -139,6 +146,7 @@
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormService/src</source>
+                                <source>services/FormStatusUpdate/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
                                 <source>services/UpdateRecordStatus/src</source>
                                 <source>services/cx2/src</source>
