--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -36,13 +36,16 @@
     "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
-    "table" : "GISContacts",
-    "schema" : "cx2"
-  }, {
     "table" : "GISRecords",
     "schema" : "cx2"
   }, {
+    "table" : "GISContacts",
+    "schema" : "cx2"
+  }, {
     "table" : "GlobalSettings",
+    "schema" : "cx2"
+  }, {
+    "table" : "GIS2Forms",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -51,13 +54,16 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
-    "table" : "MasterForms",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterCases",
     "schema" : "cx2"
   }, {
+    "table" : "MasterForms",
+    "schema" : "cx2"
+  }, {
     "table" : "MasterInspections",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
     "table" : "MCNewElectricConnection",
@@ -69,22 +75,16 @@
     "table" : "Municipalities",
     "schema" : "cx2"
   }, {
-    "table" : "MasterProjects",
-    "schema" : "cx2"
-  }, {
     "table" : "FormFieldTypes",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroupMembers",
     "schema" : "cx2"
   }, {
-    "table" : "PUDApplication",
-    "schema" : "cx2"
-  }, {
     "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
-    "table" : "Roles",
+    "table" : "PUDApplication",
     "schema" : "cx2"
   }, {
     "table" : "SFNewElectricConnection",
@@ -93,10 +93,16 @@
     "table" : "SFNewResidentialStructure",
     "schema" : "cx2"
   }, {
+    "table" : "Roles",
+    "schema" : "cx2"
+  }, {
     "table" : "SharedWith",
     "schema" : "cx2"
   }, {
     "table" : "Subdivisions",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "Users",
@@ -105,22 +111,19 @@
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
-    "table" : "UserPasswordResetTokens",
-    "schema" : "cx2"
-  }, {
     "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorApprovals",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
     "table" : "States",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorApprovals",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
     "table" : "VendorUsers",
