Removing old forms now that we are dynamic Files modified - [cx2_published_dataModel.json,FormTypesServiceImpl.java,FormStatuses.java,FormTypesController.java,FormTypes.java,FormTypesService.java,UsersController.java,UsersService.java,Users.java,FormStatusesController.java,servicedef.xml,FormStatusesService.java,UsersServiceImpl.java,FormStatusesServiceImpl.java,db-connection-settings.json,pages-config.json] Removed files - [SFNewResidentialStructure.html,PudapplicationServiceImpl.java,SFNewElectricConnection.css,McnewResidentialStructureController.java,SfnewResidentialStructureService.java,MCNewResidentialStructure.js,PUDApplication.css,MCNewResidentialStructure.css,McnewElectricConnectionController.java,McnewResidentialStructure.java,SFNewResidentialStructure.css,MCNewElectricConnection.js,SfnewResidentialStructureController.java,SFNewResidentialStructure.variables.json,Pudapplication.java,SfnewResidentialStructureDao.java,SFNewElectricConnection.variables.json,PUDApplication.js,SfnewResidentialStructureServiceImpl.java,MCNewElectricConnection.variables.json,PudapplicationController.java,SfnewElectricConnectionServiceImpl.java,SfnewResidentialStructure.java,PudapplicationDao.java,PUDApplication.variables.json,McnewResidentialStructureDao.java,SfnewElectricConnectionController.java,McnewElectricConnectionServiceImpl.java,MCNewElectricConnection.css,McnewElectricConnection.java,MCNewElectricConnection.html,McnewElectricConnectionDao.java,SfnewElectricConnection.java,SFNewElectricConnection.js,PUDApplication.html,SfnewElectricConnectionService.java,McnewElectricConnectionService.java,McnewResidentialStructureService.java,SFNewResidentialStructure.js,SFNewElectricConnection.html,MCNewResidentialStructure.variables.json,SfnewElectricConnectionDao.java,MCNewResidentialStructure.html,McnewResidentialStructureServiceImpl.java,PudapplicationService.java]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,26 +67,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "MCNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ {
-    "name" : "FormId",
-    "type" : "string"
-  }, {
-    "name" : "MunicipalityId",
-    "type" : "string"
-  } ]
-}, {
-  "name" : "MCNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ {
-    "name" : "FormId",
-    "type" : "string"
-  }, {
-    "name" : "MunicipalityId",
-    "type" : "string"
-  } ]
-}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -100,6 +80,10 @@
   "params" : [ ]
 }, {
   "name" : "ManageGISData",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "ManageMuncipalityGroups",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -159,15 +143,9 @@
   "type" : "PARTIAL",
   "params" : [ ]
 }, {
-  "name" : "PUDApplication",
+  "name" : "NewFrom",
   "type" : "PAGE",
-  "params" : [ {
-    "name" : "FormId",
-    "type" : "integer"
-  }, {
-    "name" : "MunicipalityId",
-    "type" : "integer"
-  } ]
+  "params" : [ ]
 }, {
   "name" : "ProcessForms",
   "type" : "PAGE",
@@ -176,26 +154,6 @@
   "name" : "ResetPassword",
   "type" : "PAGE",
   "params" : [ ]
-}, {
-  "name" : "SFNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ {
-    "name" : "FormId",
-    "type" : "integer"
-  }, {
-    "name" : "MunicipalityId",
-    "type" : "integer"
-  } ]
-}, {
-  "name" : "SFNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ {
-    "name" : "FormId",
-    "type" : "integer"
-  }, {
-    "name" : "MunicipalityId",
-    "type" : "integer"
-  } ]
 }, {
   "name" : "Support",
   "type" : "PAGE",
