Finalized the Form naming options section on EditForm Files modified - [pages-config.json,EditForm.variables.json,EditForm.js,app.css,EditForm.html]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,6 +67,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -135,11 +143,27 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "NewForm",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "PUDApplication",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
