push for testing Files modified - [pages-config.json,pom.xml]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -83,6 +83,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -136,6 +140,10 @@
   "params" : [ ]
 }, {
   "name" : "NewForm",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
 }, {
