Multiple Vendors For Form New files added - [Vendors2formServiceImpl.java,Vendors2formDao.java,Vendors2formService.java,Vendors2form.java,Vendors2formController.java] Files modified - [cx2_published_dataModel.json,MasterFormsController.java,VendorServiceImpl.java,cx2-queries.hbm.xml,QueryExecutionController.java,Vendor.java,VendorService.java,MasterFormsService.java,Forms.html,Forms.js,Cx2QueryExecutorServiceImpl.java,VendorController.java,servicedef.xml,Forms.variables.json,MasterForms.java,cx2_query.json,Cx2QueryExecutorService.java,MasterFormsServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -111,6 +111,9 @@
     "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
+    "table" : "Vendors2Form",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
