night shift completed, pushing to GitHub Files modified - [pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,14 +67,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "MCNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "MCNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -154,7 +146,7 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "PUDApplication",
+  "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -163,14 +155,6 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
