- Added UserLimit and FormLimit fields to the Municipalities table - Changed the GIS records setting to use a select box instead of two checkboxes Files modified - [pages-config.json,cx2_published_dataModel.json,servicedef.xml,ManageMunicipalities.variables.json,Forms.variables.json,EditForm.variables.json,Municipalities.java,Vendors2formController.java,EditForm.js,EditForm.html]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -138,6 +138,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "NewForm",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
