Deploying onshore changes from friday Files modified - [pages-config.json,servicedef.xml]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -86,6 +86,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -139,6 +143,10 @@
   "params" : [ ]
 }, {
   "name" : "NewForm",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
 }, {
