Forms- duplicate SharedWith error text Files modified - [pages-config.json,Forms.html]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,6 +67,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -146,7 +154,7 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "NewFrom",
+  "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -155,6 +163,14 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
