- Fees should come out with decimal places correctly - Fixed Fees List to be to code with the requirements from story #472 - Removed unused NewForm partial and replaced with NewForm page which will become the new form wizard New files added - [NewForm.variables.json,NewForm.js,NewForm.html,NewForm.css] Files modified - [DBUtils.jar,app.css,FormService.java,Forms.html,Forms.js,app.variables.json,pages-config.json,pom.xml]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -417,6 +417,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_NewForm" : {
+    "_id" : "wm-goToPage_NewForm-wm.NavigationVariable-1485785723881",
+    "name" : "goToPage_NewForm",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "NewForm",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ProcessForms" : {
     "_id" : "wm-goToPage_ProcessForms-wm.NavigationVariable-1482317640483",
     "name" : "goToPage_ProcessForms",
