Vendor Application- application successful, dashboard fails to display Files modified - [VendorApplication.variables.json]

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.variables.json
@@ -111,7 +111,7 @@
     "isList" : false,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "onSuccess" : "Variables.goToPage_MyCompany.invoke()",
+    "onSuccess" : "Variables.goToPage_Main.invoke()",
     "startUpdate" : false,
     "autoUpdate" : false,
     "inFlightBehavior" : "executeLast",
